# TeaDB

./: .gitignore  CMakeLists.txt  README.md  lines.py  main.cpp
doc/DBStructure/: index.md
include/: db.h  high_precision.cpp  high_precision.h  reader.h  stringValue.cpp  stringValue.h  table.h
src/: db.cpp  table.cpp
